# TemplateRepoCxx

./: .gitignore  CMakeLists.txt  README.md  parse_html.md  work_log.md
include/: Database.h  DatabaseManager.h  Html_parser.h  Html_parser_1.h  Structs.h  UrlParser.h  WebCrawler.h
src/: CMakeLists.txt  get.cpp  post.cpp  server.cpp
src/WebCrawler/: WebCrawler.cpp  WebCrawler0.cpp
test/: CMakeLists.txt  server.py  test_WebCrawler.cpp  test_baidu.py  test_database.cpp  test_html_parser.cpp  test_html_parser_1.cpp  test_html_parsing_trans_save2db.cpp  test_http_regex_match.cpp  test_read_db.cpp  test_url_parser.cpp
